--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,7 +65,7 @@ jobs:
             - run:
                 name: Run tests
                 command: |
-                  go test ./config
+                  go test ./message
             - run:
                 name: Run Whitesource
                 command: |
