--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,7 +65,7 @@ jobs:
             - run:
                 name: Run tests
                 command: |
-                  go test ./message
+                  go test -coverprofile=c.out ./agent ./api ./app ./broker ./certs ./cmd ./config ./device ./errorlog ./message ./schema
             - run:
                 name: Run Whitesource
                 command: |
