.circleci: remove coverage option
Go 1.8, which our test environment uses, does not support coverage
when testing multiple packages. (Go 1.10 does.)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,7 +65,7 @@ jobs:
             - run:
                 name: Run tests
                 command: |
-                  go test -coverprofile=c.out ./agent ./api ./app ./broker ./certs ./config ./device ./errorlog ./message ./schema
+                  go test ./agent ./api ./app ./broker ./certs ./config ./device ./errorlog ./message ./schema
             - run:
                 name: Run Whitesource
                 command: |
